@@ -1298,6 +1298,7 @@
       <adeptwayrequires>
         <required>
           <oneof>
+            <quality>The Artist's Way</quality>
             <quality>The Artisan's Way</quality>
             <quality>The Invisible Way</quality>
             <quality>The Speaker's Way</quality>
