@@ -42,6 +42,7 @@
                     <xs:element name="dv" type="xs:string" minOccurs="1" maxOccurs="1" />
                     <xs:element name="range" type="xs:string" minOccurs="1" maxOccurs="1" />
                     <xs:element name="type" type="xs:string" minOccurs="1" maxOccurs="1" />
+                    <xs:element name="useskill" type="xs:string" minOccurs="0" maxOccurs="1" />
                     <xs:element name="bonus" type="bonusTypes"  minOccurs="0" maxOccurs="1" />
                     <xs:element ref="forbidden" minOccurs="0" maxOccurs="1" />
                     <xs:element ref="required" minOccurs="0" maxOccurs="1" />
